# cpp-quant

./: .gitignore  CLAUDE.md  LICENSE  README.md  cpp-quant-study-plan.md  pyproject.toml  run_test.sh  setup.sh  study_tracker.py  test_error.txt
tests/: README.md  conftest.py  test_study_tracker.py
tests/integration/: __init__.py  test_workflows.py
tests/unit/: __init__.py  test_error_handling.py  test_statistical_calculations.py  test_streak_calculations.py
