[project]
name = "cpp-quant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
    "python-dotenv>=1.1.0",
    "rich==13.7.1",
]


[tool.ruff.lint]
ignore = ["E722", "F401", "F811", "E712"]
